<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"
    tools:context=".about">

    <TextView
        android:id="@+id/textView"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_cse_heading"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        android:padding="6dp"

 />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#2C1616"
        android:text="@string/about_cse"
        android:textSize="16sp"
        android:fontFamily="monospace"
        android:paddingLeft="8dp"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="VISION"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:fontFamily="sans-serif-condensed"
        android:padding="8dp"

        />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#2C1616"
        android:text="To contribute competent computer science professionals to the global talent pool to meet the constantly evolving societal needs.
"
        android:fontFamily="monospace"
        android:padding="8dp"
        android:textSize="14sp"
        />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MISSION"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:textSize="25sp"
        android:textAlignment="center"
        android:padding="8dp"
        />


    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#2C1616"
        android:text="@string/mission"
        android:paddingLeft="4dp"
        android:textSize="14sp"
        android:fontFamily="monospace"
        android:paddingBottom="100dp"

       />

<TextView
    android:paddingTop="18dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_the_developers"
    android:textSize="23sp"
    android:textColor="#000"
    android:paddingBottom="8dp"
    />

    <TextView
        android:lineSpacingExtra="2.5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mohd_ehtesham_uddin_qureshi_2021_passout_batch_mohammed_abdul_mannan_2021_passout_batch_p_sai_amrutha_2021_passout_batch"
        android:textColor="#201B2C"
        />










</LinearLayout>